set up event handlers and function callbaks

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,600"
+      href="https://fonts.googleapis.com/css?family=Jura&display=swap"
       rel="stylesheet"
       type="text/css"
     />
